# WOLWebService

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.bat  config_example.txt  config_sample_master.json  config_sample_slave.json  install_linux.sh  install_windows.bat  turnonws.service  wol.go  wolservice.service
efidll/: CMakeLists.txt  efiDLL.cpp
server/: CMakeLists.txt  go.mod  go.sum  server.go
server/api/: api.go
server/config/: config_master.json  config_parser.go  config_slave.json
server/util/: reboot_linux.go  reboot_windows.go  util_darwin.go  util_linux.go  util_windows.cpp  util_windows.go  util_windows.h  wol.go
unifi_udm_scripts/: cert_gen.sh  install_UDMSE.sh  restart_wol.sh  udm-boot.service  wol_cert_config  wol_cert_renew.service  wol_cert_renew.timer  wolservice.service
unifi_udm_scripts/duckdns-systemd_dns_renew/conf/: duckdns.service
